--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: node_js
-node_js: "8"
+node_js:
+  - "8.15"
 
 notifications:
   email: false
@@ -13,6 +14,7 @@ matrix:
         - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
 
     - os: linux
+      sudo: true
       services: docker
       language: generic
       env:
@@ -37,6 +39,7 @@ before_install:
     fi
 
 install:
+  - nvm install
   - npm i
 
 before_script:
