Add experimental end-to-end tests using Spectron
- Onboard a new user with wallet-generated mnemonic
- Onboard a user with a user-provided mnemonic

Requirements:
- a working wallet config with a running local env (if applicable)
- E2E_PASSWORD and E2E_MNEMONIC variables in .env file

Notes:

- Works reasonably well
- Quite easy to write
- Slow, as tests need to run sequentially to avoid conflicts with disk data ¯\_(ツ)_/¯

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "ppa": "./scripts/ppa.sh",
     "postinstall": "electron-rebuild",
     "prepare": "patch-package",
-    "release": "npm run dist -- --publish always"
+    "release": "npm run dist -- --publish always",
+    "test:e2e": "concurrently \"BROWSER=none react-scripts start\" \"wait-on $npm_package_config_cra_dev_serv && NODE_ENV=test ELECTRON_START_URL=$npm_package_config_cra_dev_serv jest --runInBand\""
   },
   "dependencies": {
     "@reach/menu-button": "0.1.7",
@@ -93,6 +94,7 @@
     "proxyquire": "1.8.0",
     "react-testing-library": "1.10.0",
     "run-script-os": "1.0.5",
+    "spectron": "5.0.0",
     "wait-on": "2.1.0"
   },
   "build": {
