--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "postinstall": "electron-rebuild",
     "prepare": "patch-package",
     "release": "npm run dist -- --publish always",
-    "test:e2e": "concurrently \"BROWSER=none react-scripts start\" \"wait-on $npm_package_config_cra_dev_serv && NODE_ENV=test ELECTRON_START_URL=$npm_package_config_cra_dev_serv jest --runInBand\""
+    "test:e2e": "concurrently --kill-others-on-fail --success first \"BROWSER=none react-scripts start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv jest $JEST_ARGS\""
   },
   "dependencies": {
     "@reach/menu-button": "0.1.7",
@@ -86,6 +86,7 @@
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-standard": "4.0.0",
     "expect": "22.4.3",
+    "get-port-sync": "1.0.0",
     "husky": "1.3.1",
     "lint-staged": "8.1.0",
     "merkletreejs": "0.0.20",
