--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.3",
     "react-virtualized": "9.20.1",
+    "secp256k1": "3.6.2",
     "smart-round": "1.0.0",
     "styled-components": "4.1.2",
     "universal-analytics": "0.4.20",
