--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "smart-round": "1.0.0",
     "styled-components": "4.1.2",
     "universal-analytics": "0.4.20",
+    "web3-patches": "1.0.0",
     "web3-utils": "1.0.0-beta.37"
   },
   "devDependencies": {
