--- a/package.json
+++ b/package.json
@@ -53,32 +53,32 @@
     "qrcode.react": "0.7.2",
     "raven": "2.6.4",
     "raven-js": "3.27.0",
-    "react": "16.7.0",
-    "react-dom": "16.7.0",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
     "react-hint": "3.1.0",
     "react-modal": "3.5.1",
     "react-motion": "0.5.2",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "3.2.0",
     "react-virtualized": "9.20.1",
     "smart-round": "1.0.0",
     "styled-components": "4.1.2",
     "universal-analytics": "0.4.20",
-    "web3-utils": "1.0.0-beta.37"
+    "web3-utils": "1.2.1"
   },
   "devDependencies": {
     "concurrently": "3.6.0",
     "devtron": "1.4.0",
-    "electron": "4.0.5",
+    "electron": "5.0.11",
     "electron-builder": "20.38.5",
     "electron-devtools-installer": "2.2.4",
-    "electron-rebuild": "1.8.4",
-    "eslint": "5.6.0",
+    "electron-rebuild": "1.8.6",
+    "eslint": "6.5.1",
     "eslint-config-bloq": "2.1.0",
     "eslint-config-prettier": "4.1.0",
     "eslint-config-standard": "12.0.0",
-    "eslint-plugin-import": "2.17.2",
+    "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsdoc": "4.8.3",
     "eslint-plugin-mocha": "5.3.0",
     "eslint-plugin-node": "8.0.1",
