--- a/public/.eslintrc.json
+++ b/public/.eslintrc.json
@@ -14,6 +14,7 @@
   },
   "root": true,
   "rules": {
-    "promise/catch-or-return": "error"
+    "promise/catch-or-return": "error",
+    "require-jsdoc": "off"
   }
 }
