--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "json-stringify-safe": "5.0.1",
     "lodash": "4.17.15",
     "metronome-contracts": "2.5.0",
-    "metronome-wallet-core": "autonomoussoftware/metronome-wallet-core#qtum",
-    "metronome-wallet-ui-logic": "autonomoussoftware/metronome-wallet-ui-logic#qtum",
+    "metronome-wallet-core": "github:autonomoussoftware/metronome-wallet-core#qtum",
+    "metronome-wallet-ui-logic": "github:autonomoussoftware/metronome-wallet-ui-logic#qtum",
     "nedb": "1.8.0",
     "p-timeout": "2.0.1",
     "patch-package": "5.1.1",
