--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "env:darwin:linux": "./scripts/env.sh",
     "ppa": "./scripts/ppa.sh",
     "postinstall": "electron-builder install-app-deps",
-    "prepare": "patch-package",
+    "prepare": "patch-package && husky install",
     "release": "npm run dist -- --publish always"
   },
   "dependencies": {
@@ -69,26 +69,26 @@
     "web3-utils": "1.3.6"
   },
   "devDependencies": {
-    "concurrently": "3.6.0",
+    "concurrently": "6.2.0",
     "electron": "13.1.4",
     "electron-builder": "22.11.7",
     "electron-devtools-installer": "3.2.0",
-    "eslint-config-bloq": "2.1.0",
-    "eslint-config-prettier": "4.1.0",
-    "eslint-config-standard": "12.0.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jsdoc": "4.8.3",
-    "eslint-plugin-mocha": "5.3.0",
-    "eslint-plugin-node": "8.0.1",
-    "eslint-plugin-prefer-arrow": "1.1.5",
-    "eslint-plugin-promise": "4.1.1",
+    "eslint-config-bloq": "2.4.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-config-standard": "16.0.3",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-jsdoc": "35.4.1",
+    "eslint-plugin-mocha": "9.0.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-promise": "5.1.0",
     "eslint-plugin-require-path-exists": "1.1.9",
     "eslint-plugin-standard": "4.0.0",
     "expect": "22.4.3",
-    "husky": "1.3.1",
-    "lint-staged": "8.1.0",
+    "husky": "7.0.0",
+    "lint-staged": "11.0.0",
     "prettier": "2.3.2",
-    "proxyquire": "1.8.0",
+    "proxyquire": "2.1.3",
     "react-testing-library": "1.10.0",
     "run-script-os": "1.1.6",
     "wait-on": "6.0.0"
@@ -155,18 +155,15 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
-    "{src,public}/**/*.js": [
-      "eslint --cache"
+    "src/**/*.js": [
+      "eslint  --config src/.eslintrc.json --cache"
+    ],
+    "public/**/*.js": [
+      "eslint  --config public/.eslintrc.json --cache"
     ],
     "src/**/*.{js,json,css,md}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   }
 }
