--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ cache:
   - '%USERPROFILE%\.electron'
 
 install:
-  - ps: Install-Product node 12.0.0
+  - ps: Install-Product node 14
   - npm i --global --production windows-build-tools@4
   - npm i
 
@@ -22,7 +22,7 @@ platform:
 build_script:
   - npm run dist
 
-test: "off"
+test: false
 
 for:
 -
